--- a/app/assets/stylesheets/modules/_account.scss
+++ b/app/assets/stylesheets/modules/_account.scss
@@ -2,8 +2,7 @@
   position: relative;
   background-color: gray;
   height: 100vh;
-  .button {
-    @include textBtn();
+  .right-top {
     position: absolute;
     top: 15px;
     right: 25px;
@@ -32,32 +31,6 @@
     .form-area {
       width: 268px;
       margin: 0 auto;
-      // .field {
-      //   margin: 0 auto 7px;
-      //   border-radius: 4px;
-      //   background-color: #EFEFEF;
-      //   width: 100%;
-      //   input {
-      //     width: 248px;
-      //     height: 17px;
-      //     padding: 10px;
-      //     font-size: 14px;
-      //     background-color: transparent;
-      //     border: 0;
-      //     outline: none;
-      //   }
-      // }
-      .submit-button {
-        @include textBtn();
-        display: block;
-        width: 100%;
-        background-color: $accent-color;
-        color: white;
-        border: none;
-        &:hover {
-          cursor: pointer;
-        }
-      }
       .notice {
         font-size: 10px;
         margin: 15px 0 15px;
@@ -68,15 +41,12 @@
     position: absolute;
     bottom: 24px;
     width: 100%;
-    // margin: 0 auto;
-    &__link {
+    &__list {
       text-align: center;
       list-style: none;
       color: white;
-      // display: block;
       &__item {
         margin-right: 24px;
-        // float: left;
         display: inline;
       }
     }
