--- a/app/assets/stylesheets/mixin/_mixin.scss
+++ b/app/assets/stylesheets/mixin/_mixin.scss
@@ -4,25 +4,30 @@
   font-size: 15px;
   // font-weight: bold;
   text-align: center;
-  background-color: $mono-color-light;
   line-height: 36px;
   position: relative;
-  cursor: pointer;
-  .link {
-    width: 100%;
-    height: 100%;
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    &:link, &:visited, &:hover, &:active {
-      // color: black;
-      text-decoration: none;
-    }
+  border: none;
+  // display: block;
+  // cursor: pointer;
+  padding: 0 15px;
+  &:hover {
+    cursor: pointer;
   }
-  .link-text {
-    margin: 0 20px;
-  }
+  // .link {
+  //   width: 100%;
+  //   height: 100%;
+  //   display: block;
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   &:link, &:visited, &:hover, &:active {
+  //     // color: black;
+  //     text-decoration: none;
+  //   }
+  // }
+  // .link-text {
+  //   margin: 0 20px;
+  // }
 }
 
 @mixin iconBtn($size){
@@ -33,7 +38,7 @@
   border-radius: 50%;
   position: relative;
   &:hover {
-    background-color: #EFEFEF;
+    background-color: $mono-color-light;
   }
   .menu-link {
     width: 100%;
