--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -4,7 +4,18 @@ body {
   flex-direction: column;
   color: #999999;
 }
-
+a {
+  &:link, &:visited, &:hover, &:active {
+    color: $font-color-dark;
+    text-decoration: none;
+  }
+}
+.small-tile {
+  width: 256px;
+}
+.big-tile {
+  width: 328px;
+}
 .container {
   flex: 1;
   background-color: white;
@@ -16,69 +27,105 @@ body {
   .shown {
     display: block;
   }
-  .pins {
+  .tiles {
     margin: 0 auto;
     background-color: white;
     &__item {
-      width: 256px;
-      margin: 4px 2px;
-      background-color: white;
+      // width: 325px;
+      margin: 4px 2px 20px;
+      // background-color: green;
       word-break: break-word;
       border-radius: 6px;
+      position: relative;
+      &:hover {
+        cursor: pointer;
+      }
       &__wrapper {
-        width: 236px;
         margin: 10px 10px 0;
-        position: relative;
-        .item-bg {
-          width: 100%;
+        .height236 {
           height: 236px;
-          background-color: $mono-color-light;
-          border-radius: 8px;
-          margin-bottom: 8px;
-          display: flex;
-          align-items: center;
-          .fa-plus-circle {
-            color: $accent-color;
-            margin: 0 auto;
-          }
         }
-        .item-link {
-          width: 100%;
-          height: 100%;
-          display: block;
-          position: absolute;
-          top: 0;
-          right: 0;
-          &:hover {
+        // .width236 {
+        //   width: 236px;
+        // }
+        .item-object {
+          margin: 0 8px 6px;
+          .item-link {
+            width: 100%;
+            height: 100%;
+            display: block;
+            position: absolute;
+            top: 0;
+            right: 0;
+          }
+          .zoom-in:hover {
             cursor: zoom-in;
           }
-          &:link, &:visited, &:hover, &:active {
-            color: black;
-            text-decoration: none;
+          &__img {
+            display: block;
+            width: 100%;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            .fa-plus-circle {
+              color: $accent-color;
+              margin: 0 auto;
+            }
           }
-        }
-        .item-img {
-          width: 236px;
-          border-radius: 8px;
-          margin-bottom: 8px;
+          .pin-img {
+            width: 100%;
+            height: auto;
+          }
+          .board-img {
+            height: 236px;
+            width: 100%;
+          }
+          .no-img{
+            background-color: $mono-color-light;
+          }
         }
         .item-info {
           margin: 0 8px 6px;
-          &__title {
-            width: 180px;
+          display: flex;
+          .item-pin {
+            font-size: 8.6px;
+            line-height: 15px;
+          }
+          .item-title {
             font-size: 14px;
             font-weight: bold;
-            float: left;
+            line-height: 21px;
           }
-          &__pin {
-            float: right;
-            font-size: 8.6px;
+          .item-edit {
+            @include textBtn();
+            background-color: $mono-color-middle;
+            z-index: 2;
+            // font-weight: normal;
+            font-size: 12px;
+            &:hover {
+              background-color: $mono-color-dark;
+            }
           }
+          &--left {
+            flex: 1;
+            // .pin-title {
+            //   font-size: 14px;
+            //   font-weight: bold;
+            // }
+          }
+          &--right {
+          }
+          // .pin-number {
+          //   font-size: 8.6px;
+          // }
+          // &__text {
+          //   font-size: 18px;
+          //   line-height: 36px;
+          // }
         }
         .item-description {
-          font-size: 12px;
           margin: 0 8px 6px;
-          clear: both;
+          font-size: 12px;
         }
       }
       &__user {
@@ -87,6 +134,9 @@ body {
         border-radius: 4px;
         position: relative;
         padding: 6px 8px;
+        &:hover {
+          background-color: $mono-color-light;
+        }
         .item-user--link {
           width: 100%;
           height: 100%;
@@ -119,97 +169,6 @@ body {
             font-weight: bold;
           }
           .user-board {
-          }
-        }
-      }
-    }
-  }
-
-  .boards {
-    margin: 0 auto;
-    background-color: white;
-    &__item {
-      width: 325px;
-      margin: 4px 2px;
-      background-color: white;
-      word-break: break-word;
-      border-radius: 6px;
-      &:hover {
-        cursor: pointer;
-      }
-      &__wrapper {
-        width: 305px;
-        margin: 10px 10px 0;
-        position: relative;
-        .item-object {
-          background-color: $mono-color-light;
-          border-radius: 8px;
-          margin-bottom: 8px;
-          .item-link {
-            width: 100%;
-            height: 100%;
-            display: block;
-            position: absolute;
-            top: 0;
-            right: 0;
-            // &:hover {
-            //   cursor: zoom-in;
-            // }
-            &:link, &:visited, &:hover, &:active {
-              color: black;
-              text-decoration: none;
-            }
-          }
-          .item-img {
-            display: block;
-            width: 305px;
-            height: 200px;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            // text-align: center;
-            // border-top: 1px solid $mono-color-light;
-            // &:hover {
-            //   background-color: $mono-color-light;
-            //   border-radius: 0 0 8px;
-            // }
-            // line-height: 64px;
-            .fa-plus-circle {
-              color: $accent-color;
-              margin: 0 auto;
-            }
-          }
-        }
-        .item-info {
-          margin: 0 0 6px 8px;
-          display: flex;
-          &--left {
-            flex: 1;
-            .item-title {
-              font-size: 14px;
-              font-weight: bold;
-              line-height: 21px;
-            }
-            .item-pin {
-              font-size: 8.6px;
-              line-height: 15px;
-            }
-          }
-          &--right {
-            .item-edit {
-              @include textBtn();
-              background-color: $mono-color-light;
-              z-index: 2;
-              font-weight: normal;
-              font-size: 12px;
-              &:hover {
-                background-color: $mono-color-middle;
-              }
-            }
-          }
-          &__text {
-            font-size: 18px;
-            line-height: 36px;
           }
         }
       }
@@ -249,25 +208,24 @@ body {
       border-radius: 50%;
       margin-right: 15px;
     }
-    .file-button {
-      @include textBtn();
-      &:hover {
-        background-color: $mono-color-middle
-      }
+  }
+}
+.wide {
+  width: 100%;
+}
+.button {
+  @include textBtn();
+  &--gray {
+    @include textBtn();
+    color: $font-color-dark;
+    background-color: $mono-color-light;
+    &:hover {
+      background-color: $mono-color-middle;
     }
-    .actions {
-      .btn {
-        @include textBtn();
-        display: block;
-        width: 100px;
-        background-color: $accent-color;
-        color: white;
-        border: none;
-        float: right;
-        &:hover {
-          cursor: pointer;
-        }
-      }
-    }
+  }
+  &--red {
+    @include textBtn();
+    background-color: $accent-color;
+    color: $font-color-white;
   }
 }
