--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -6,7 +6,6 @@
         .menu-button.modal-open{data: {target: "modal-boardEdit"}}
           = fa_icon("pencil", class: "fa-lg menu-icon")
         .menu-button
-          = link_to "", "/#1", class: "menu-link"
           = fa_icon("arrows", class: "fa-lg menu-icon")
     .board-header__info
       .board-header__info--left
@@ -14,7 +13,7 @@
         %h3.board-pins 4 pins
         %p.board-about #{@board.description}
       .board-header__info--right
-        = image_tag "#{@board.user.avatar}", class: "avatar--small"
+        = link_to image_tag(@board.user.avatar, class: "avatar--small"), user_path(@board.user)
   = render partial: "/shared/pins"
   - if user_signed_in?
     = render partial: "/shared/post"
