--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -3,7 +3,7 @@
   .board-header
     .board-header__menu
       -if user_signed_in? && current_user.id == @board.user_id
-        .menu-button.modal-open{data: {target: "modal-boardEdit"}}
+        .menu-button.modal-open{data: {target: "modal-boardEdit" + @board.id.to_s}}
           = fa_icon("pencil", class: "fa-lg menu-icon")
         .menu-button
           = fa_icon("arrows", class: "fa-lg menu-icon")
@@ -17,4 +17,5 @@
   = render partial: "/shared/pins"
   - if user_signed_in?
     = render partial: "/shared/post"
-  = render partial: "/shared/modal-boardEdit"
+    - if current_user == @board.user
+      = render partial: "/shared/modal-boardEdit", locals: { board: @board }
