--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -20,4 +20,4 @@
         = f.label :about, "自己紹介", class: "field-label"
         = f.text_area :about, class: "field-input"
       .actions
-        = f.submit "設定を保存", class: 'button--red'
+        = f.submit "設定を保存", class: 'button--red right'
