--- a/app/assets/stylesheets/modules/_board.scss
+++ b/app/assets/stylesheets/modules/_board.scss
@@ -41,6 +41,7 @@
           position: absolute;
           right: 0;
           bottom: 0;
+          object-fit: cover;
         }
         .avatar--large {
           width: 168px;
@@ -49,6 +50,7 @@
           position: absolute;
           right: 0;
           bottom: 0;
+          object-fit: cover;
         }
       }
     }
