--- a/app/assets/stylesheets/modules/_modal.scss
+++ b/app/assets/stylesheets/modules/_modal.scss
@@ -72,9 +72,7 @@
       // margin: 0 auto;
       // padding: 15px 24px;
       background-color: white;
-      .align-center {
-        margin: 0 auto;
-      }
+
       .message {
         font-size: 30px;
         text-align: center;
@@ -102,6 +100,7 @@
           }
           .board-title {
             flex: 1;
+            margin: 0 5px;
           }
           .board-button {
             @include textBtn();
@@ -126,7 +125,7 @@
       }
     }
     &__footer {
-      padding: 10px;
+      padding: 10px 25px;
       // font-size: 16px;
       // font-weight: bold;
       // align-items: center;
