--- a/app/assets/stylesheets/modules/_pin.scss
+++ b/app/assets/stylesheets/modules/_pin.scss
@@ -102,6 +102,7 @@
           width: 40px;
           height: 40px;
           border-radius: 50%;
+          object-fit: cover;
         }
       }
       .pin-user--right {
@@ -121,7 +122,7 @@
       }
     }
     &__board {
-      height: 40px;
+      min-height: 40px;
       margin: 0 32px;
       padding: 8px 0 15px;
       // padding-top: 8px;
@@ -129,6 +130,7 @@
       position: relative;
       border-top: 1px solid $mono-color-middle;
       // padding: 6px 8px;
+      display: flex;
       .pin-user--link {
         width: 100%;
         height: 100%;
@@ -145,12 +147,12 @@
         }
       }
       .pin-board--left {
-        float: left;
         margin-right: 8px;
         .user-avatar {
           width: 40px;
           height: 40px;
           border-radius: 50%;
+          object-fit: cover;
         }
       }
       .pin-board--right {
@@ -158,6 +160,7 @@
         font-size: 14px;
         line-height: 18px;
         padding-top: 4px;
+        word-wrap: break-word;
         .board-event {
           font-weight: bold;
         }
