--- a/app/views/shared/_boards.html.haml
+++ b/app/views/shared/_boards.html.haml
@@ -12,11 +12,17 @@
       .tiles__item__wrapper.hoverTrigger
         .item-object
           = link_to "", "/boards/#{board.id}", class: "item-link"
-          = image_tag "chari.jpg", class: "item-object__img board-img"
+          .board-img
+            .img.img--0.no-img
+            .img.img--1.no-img
+            .img.img--2.no-img
+            .img.img--3.no-img
+            - board.pins.first(4).each_with_index do |pin, i|
+              = image_tag pin.image, class: "img img--#{i} no-img"
         .item-info
           .item-info--left
             .item-title #{board.title}
-            .item-pin 16 ピン
+            .item-pin #{board.board_pins_count} ピン
           - if @user == current_user
             .item-info--right
               .item-edit.hidden.modal-open{ data: { target: "modal-boardEdit" + board.id.to_s } } 編集
