Configure secrets.yml

--- a/app/assets/stylesheets/modules/_main.scss
+++ b/app/assets/stylesheets/modules/_main.scss
@@ -121,6 +121,7 @@ a {
             position: absolute;
             top: 20px;
             right: 25px;
+            z-index: 3;
           }
         }
         .item-info {
