Configure thumbnail version images

--- a/app/assets/stylesheets/modules/_board.scss
+++ b/app/assets/stylesheets/modules/_board.scss
@@ -34,6 +34,7 @@
       }
       &--right {
         position: relative;
+        width: 168px;
         .avatar--small {
           width: 60px;
           height: 60px;
