--- a/app/assets/stylesheets/mixin/_mixin.scss
+++ b/app/assets/stylesheets/mixin/_mixin.scss
@@ -13,6 +13,14 @@
   &:hover {
     cursor: pointer;
   }
+  .text-link {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
   // .link {
   //   width: 100%;
   //   height: 100%;
