--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -14,5 +14,5 @@
         = fa_icon("user", class: "fa-2x menu-icon")
     - else
       .text-button
-        = link_to "", new_user_registration_path, class: "link"
+        = link_to "", new_user_registration_path, class: "text-link"
         %span.link-text 登録/ログイン
