--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -66,3 +66,30 @@
     }
   }
 }
+.search__result {
+  display: none;
+  position: absolute;
+  top: 54px;
+  left: 88px;
+  width: calc(100vw - 247px);
+  min-height: 60px;
+  background-color: $mono-color-white;
+  z-index: 15;
+  padding: 15px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  .message {
+    line-height: 40px;
+  }
+  .result {
+    margin-bottom: 15px;
+    display: none;
+    &__label {
+      font-size: $font-xs;
+    }
+    &__text {
+      font-size: $font-s;
+      margin-top: 5px;
+    }
+  }
+}
